# NtuRbtProject

./: .gitignore  CMakeLists.txt  Makefile  SoundManager.cpp  board.cpp  board.hpp  main.cpp  minimax.cpp  minimax.hpp  minimax.py  sound_manager.cpp
ai/: AI.cpp  AI.h  Message.h
algorithm/: minimax.cpp  minimax.hpp  minimax.py
hci/: HCI.cpp  HCI.h  LTexture.cpp  LTexture.h  Makefile  README.md  SoundManager.cpp  SoundManager_1.cpp
robot/: CMakeLists.txt  main.cpp  robot.cpp  robot.hpp  server.cpp  server.hpp
speech/: README  README.md  sentences.txt  speech2text.py  start.sh
vision/: CMakeLists.txt  KinectManager.cpp  KinectManager.h  Makefile  VisionManager.cpp  VisionManager.h
